
    * jabberd/mio_ssl.c: support for wildcards in certs
    * jabberd/mio_tls.cc: same
    * jabberd/lib/snprintf.c: removed - need buildin snprintf now
    * jabberd/lib/hash.cc: new SHA-1 implementation
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/hmac.c(c): changes due to new SHA-1 implementation
    * jabberd/lib/sha.c: removed old SHA-1 implementation

2007-02-10  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: more info on rejected certificates

2007-02-09  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.c(c): working on virtual host support

2007-02-07  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.c: Checking id-on-xmppAddr when using GnuTLS now
    * jabberd/subjectAltName.asn: same
    * jabberd/subjectAltName_asn1_tab.c: same

2007-02-01  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.c(c): extended pool debugging to xmlnodes
    * jabberd/lib/pool.c: same
    * jabberd/jabberd.cc: same

2007-01-30  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.c: pre-C99-compatibility
    * jabberd/mio_tls.c: working on id-on-xmppAddr support, but waiting for
    solution in GnuTLS (see my mails on their mailing list)
    * jabberd/lib/pool.c: more information when doing pool debugging

2007-01-14  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.h: cleaned interface to the mio read/write handlers
    * jabberd/mio_ssl.c: same
    * jabberd/mio.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/karma.c: same
    * jabberd/base/base_stdout.c: same
    * jabberd/mio_raw.c: same
    * jabberd/mio_tls.c: fixed and reenabled GnuTLS

2006-12-22  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_admin.c: change node's name to show online sessions
    * jsm/modules/mod_disco.c: same

2006-12-19  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_ssl.c: reverted default to SSL_CTX_use_certificate_file()
    * jabberd/lib/messages.c: do not abort jabberd14 on locale failure
