@@ -7,6 +7,7 @@
     * jabberd/lib/jabberdlib.h: same
     * jabberd/lib/hmac.c(c): changes due to new SHA-1 implementation
     * jabberd/lib/sha.c: removed old SHA-1 implementation
+    * dialback/dialback.c: logging ciphers and such
 
 2007-02-10  Matthias Wimmer  <m@tthias.eu>
 
